# qrpc

./: .gitignore  Build  ChangeLog  LICENSE  README.md  REQUIREMENTS.md  rebar.config
.codex/: AGENTS.md
.codex/skills/changelog-erl/: SKILL.md
.codex/skills/changelog-pkg/: SKILL.md
.codex/skills/changelog-root/: SKILL.md
.codex/skills/release/: SKILL.md
.github/workflows/: build-package.yml
ansible/: README.md
ansible/env/example/: inventory.yml
ansible/playbooks/: cloudflare_dns.yml  cloudflare_tunnel.yml  fresh_stage.yml  qrpc.yml  webarena_indigo.yml
apps/q_tut/: ChangeLog  README.md  rebar.config
apps/q_tut/src/: q_tut.app.src  q_tut.erl  q_tut_app.erl  (+1 more)
apps/q_vvx/: ChangeLog  README.md  rebar.config
apps/q_vvx/crates/q_vvx_worker/: Cargo.toml  README.md
apps/q_vvx/crates/q_vvx_worker/src/: main.rs
apps/q_vvx/crates/super_simple_worker/: Cargo.toml  README.md
apps/q_vvx/crates/super_simple_worker/src/: main.rs
apps/qrpc/: ChangeLog
aws/: README.md  manual-test.md  terraform-cloudshell-setup.md
aws/ssm/: build_package.sh
aws/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
config/: foreground.sh  license_whitelist.txt  mk.conf.patch  pkgrc  strict_sys.config  sys.config  vm.args
config/system/: qrpc.service  rabbitmq-server.service
meta-pkgs/qrpc-devel/: DESCR  Makefile
meta-pkgs/qrpc-prod/: DESCR  Makefile
scripts/: build_q_vvx_worker.sh  build_super_simple_worker.sh  license_collector.sh  license_collector_test.sh
scripts/q_vvx_bench/: README.md  generate_scenario.py  index.html  result.json  scenario.json
(+139 files in other folders)
