[package]
name = "super_simple_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = "0.3"
lapin = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
voicevox_core = { git = "https://github.com/voicevox/voicevox_core.git", tag = "0.16.2", default-features = false, features = ["load-onnxruntime"] }
